--- a/Home.html
+++ b/Home.html
@@ -1,6 +1,6 @@
 <html>
 
-    <h <center>L2S1 Software Project</center></h1>
+    <h1> <center>L2S1 Software Project</center></h1>
     <h2>Team Miracle</h2>
     <h2>Group Members</h2>
     
